# fastn-sdk

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci-python.yml  publish-python.yml
generator/: diff.py  generate.py  registry_snapshot.json
python/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
python/examples/: basic_usage.py  environments.py  multi_tenant.py
python/examples/cli/: cli_commands.sh
python/examples/sdk/: agents.py  async_usage.py  basic_usage.py  bedrock_agent.py  connectors.py  control_plane.py  error_handling.py  flows.py  llm_agent.py  multi_step_agent.py  multi_tenant.py
python/fastn/: __init__.py  __init__.pyi  _auth_ns.py  _catalog.py  _constants.py  _flows.py  _formatters.py  _http.py  _kit.py  _projects.py  _skills.py  auth.py  cli.py  cli.py.bak  client.py  config.py  connector.py  exceptions.py  oauth.py
python/fastn/cli/: __init__.py  _helpers.py  _registry.py  agent_command.py  auth_commands.py  flows_command.py  kit_command.py  registry_commands.py  run_command.py  skills_command.py
python/fastn/connectors/: acumatica.pyi  airparser.pyi  airtable.pyi  aitable.pyi  akeneo.pyi  algolia.pyi  amazon.pyi  ampliance.pyi  amplience.pyi  anthropic_claude.pyi  apollo.pyi  asana.pyi  attio.pyi  authorization.pyi  autom.pyi  aws_cloudwatch.pyi  aws_dynamodb.pyi  aws_kinesis.pyi  aws_lambda.pyi  aws_redshift.pyi  aws_security_token_service.pyi  aws_simple_notification_service.pyi  aws_simple_queue_service.pyi  aws_simple_storage_service.pyi  azure_blob_storage.pyi  azure_data_explorer.pyi  azure_devops.pyi  azure_file_storage.pyi  azure_table_storage.pyi  bamboohr.pyi  baserow.pyi  bigcommerce.pyi  bill.pyi  bitly.pyi  bloomreach_content.pyi  bloomreach_discovery.pyi  bloomreach_engagement.pyi  bonsai_elasticsearch.pyi  box.pyi  breathehr.pyi  (+225 more)
python/tests/: test_auth.py  test_client.py  test_config.py  test_connector.py  test_exceptions.py  test_oauth.py
python/tests/cli/: conftest.py  test_agent_command.py  test_agent_helpers.py  test_cli_commands.py  test_cli_helpers.py  test_detect_api_error.py  test_detect_languages.py  test_flows_command.py  test_helpers_extended.py  test_kit_command.py  test_skills_command.py
python/tests/sdk/: conftest.py  test_client.py  test_connector.py  test_exceptions.py  test_projects.py  test_skills.py
(+7 files in other folders)
